--- a/index.html
+++ b/index.html
@@ -422,6 +422,9 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 		</div>
 	</div>
 </section>
+<section id="section-investors" class="page-section section nomargin dark bg-stringlabs-dark full-height">
+
+</section>
 <script>
 
     function dfinityDeckLang(lang) {
