--- a/index.html
+++ b/index.html
@@ -425,20 +425,55 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 <section id="section-investors" class="page-section section nomargin dark bg-stringlabs-dark full-height">
 
 </section>
-<script>
+<script defer>
 
-    function dfinityDeckLang(lang) {
-        // Hide all other languages first
-        $(".dfinity-deck").hide();
-        console.log("#dfinity-deck-" + lang);
+    let Page;
 
-        // Show the correct lang vesion
-        $("#dfinity-deck-" + lang).removeClass("hidden");
-        $("#dfinity-deck-" + lang).show();
+    // Implement a Page component to manage the state of the page when the DOM is ready
+    document.addEventListener('DOMContentLoaded', function(e) {
+        Page = {
 
-        // Workdaround: Force redraw the deck widget by firing a resize event
-        window.dispatchEvent(new Event('resize'));
-    }
+            config: {
+              responsiveBreakpoint: 1000
+            },
 
+            events: [
+              {
+                  listener: '.primary-menu-item > a',
+                  type: 'click',
+                  handler: 'scrollToAnchor'
+              }
+            ],
+
+            isMobile() {
+              return (window.innerWidth < this.config.responsiveBreakpoint);
+            },
+
+            scrollToAnchor(staticArgs, event) {
+                return $('html, body').animate({ scrollTop: $($(event.target).data().href).offset().top }, 'slow');
+            },
+
+            initDeckLang(lang) {
+                $(".dfinity-deck").hide();
+                console.log("#dfinity-deck-" + lang);
+                $("#dfinity-deck-" + lang).removeClass("hidden");
+                $("#dfinity-deck-" + lang).show();
+                return window.dispatchEvent(new Event('resize'));
+            },
+
+            // must return `this`
+            didLoad() {
+                this.events.forEach(event => {
+                    document.querySelectorAll(event.listener).forEach(selector => {
+                        selector['on' + event.type] = this[event.handler].bind(this, event.staticArgs);
+                    }, this);
+                }, this);
+                return this;
+            }
+        }.didLoad();
+
+        // Moved a rogue function `dfinityDeckLang` to the page component
+        dfinityDeckLang = Page.initDeckLang;
+    });
 </script>
 <!-- #content end -->
