--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 <section id="section-investors" class="page-section section nomargin dark bg-stringlabs-dark full-height">
 
 </section>
-<script defer>
+<script>
 
     let Page;
 
