--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                 <h2>{% t index.hero-title %}</h2>
                 <p>{% t index.hero-subtitle %}</p>
             </div>
+            <a class="section-link" href="{{ base }}/{{ page.projects-link }}" data-href="#section-work">
+                <div>&darr;</div>
+            </a>
         </section>
         <section id="section-work" class="page-section section nomargin dark bg-stringlabs">
             <a name="projects"></a>
@@ -90,12 +93,19 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                 </div>
                 <div class="clear"></div>
             </div>
+            <a class="section-link" href="{{ base }}/{{ page.projects-link }}" data-href="#section-research">
+                <div>&darr;</div>
+            </a>
         </section>
         <section id="section-research" class="page-section section nomargin dark bg-stringlabs-dark full-height">
-
+            <a class="section-link" href="{{ base }}/{{ page.projects-link }}" data-href="#section-research-2">
+                <div>&darr;</div>
+            </a>
         </section>
         <section id="section-research-2" class="page-section section nomargin dark bg-stringlabs-dark full-height">
-
+            <a class="section-link" href="{{ base }}/{{ page.projects-link }}" data-href="#section-dfinity">
+                <div>&darr;</div>
+            </a>
         </section>
         <section id="section-dfinity" class="page-section section nomargin bg-stringlabs-dark dark full-height">
             <a name="dfinity"></a>
@@ -217,11 +227,16 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
                  -->
             </div>
             <div class="clear"></div>
+            <a class="section-link" href="{{ base }}/{{ page.projects-link }}" data-href="#section-presentations-2">
+                <div>&darr;</div>
+            </a>
         </section>
     </div>
 </section>
 <section id="section-presentations-2" class="page-section section nomargin dark bg-stringlabs-dark full-height">
-
+    <a class="section-link" href="{{ base }}/{{ page.projects-link }}" data-href="#section-team">
+        <div>&darr;</div>
+    </a>
 </section>
 <section id="section-team" class="page-section section nomargin dark bg-stringlabs-dark">
 	<div class="heading-block center">
@@ -421,9 +436,14 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 			</div>
 		</div>
 	</div>
+    <a class="section-link" href="{{ base }}/{{ page.projects-link }}" data-href="#section-investors">
+        <div>&darr;</div>
+    </a>
 </section>
 <section id="section-investors" class="page-section section nomargin dark bg-stringlabs-dark full-height">
-
+    <a class="section-link" href="{{ base }}/{{ page.projects-link }}" data-href="#section-hero">
+        <div>&uarr;</div>
+    </a>
 </section>
 <script>
 
@@ -439,7 +459,7 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
 
             events: [
               {
-                  listener: '.primary-menu-item > a > div',
+                  listener: '.primary-menu-item > a > div, .section-link > div',
                   type: 'click',
                   handler: 'scrollToAnchor'
               }
@@ -450,7 +470,9 @@ hero-subtitle: String Labs is a crypto studio, incubator and investor.
             },
 
             scrollToAnchor(staticArgs, event) {
-                return $('html, body').animate({ scrollTop: $($(event.target).parent().data().href).offset().top }, 'slow');
+                event.preventDefault();
+                $('html, body').animate({ scrollTop: $($(event.target).parent().data().href).offset().top }, 'slow');
+                return false;
             },
 
             initDeckLang(lang) {
